--- a/index.html
+++ b/index.html
@@ -8,7 +8,51 @@
 </head>
 
 <body>
+  <div class="container">
+    <h1>Address Book</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <hr>
+        <h2>Add a Contact:</h2>
+        <form id="new-contact">
+          <div class="form-group">
+            <label for="new-first-name">First Name</label>
+            <input type="text"  class="form-control" id="new-first-name" name="new-first-name">
+          </div>
+          <div class="form-group">
+            <label for="new-last-name">Last Name</label>
+            <input type="text"  class="form-control" id="new-last-name" name="new-last-name">
+          </div>
+          <div class="form-group">
+            <label for="new-phone-number">Phone Number</label>
+            <input type="text"  class="form-control" id="new-phone-number" name="new-phone-number">
+          </div>
+          <button type="submit" class="btn-primary">Add</button>
+        </form>
+        <hr>
+        <h2>Contacts:</h2>
+        <div id="contacts">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div id="contact-details" class="hidden">
+          <h2>Contact Details:</h2>
+          <p>First Name: <span class="first-name"></span></p>
+          <p>Last Name: <span class="last-name"></span></p>
+          <p>Phone Number: <span class="phone-number"></span></p>
+          <button class="btn-primary delete" type="button">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
 
+
+
+
+
+  <!-- 
     <h1>Address Book</h1>
     <h2>Add a Contact:</h2>
     <form id="new-contact">
@@ -30,6 +74,6 @@
       <p>Last Name: <span id="last-name"></span></p>
       <p>Phone Number: <span id="phone-number"></span></p>
     </div>
-    
+
 </body>
-</html>
+</html> -->
